# IMU-utils

./: 2.docx  README.md  使用说明
2/: CMakeLists.txt
2/main/: gener_alldata.cpp
2/src/: imu.cpp  imu.h  imu1.cpp  param.cpp  param.h  utilities.cpp  utilities.h
3/: CurveFitting.cpp
3/backend/: edge.cc  edge.h  problem.cc  problem.h  vertex.cc  vertex.h
3/utils/: tic_toc.h
catkin_imu_utils/: 编译方法
vio_data_simulation-master/python_tool/: draw_trajcory.py
vio_data_simulation-master/src/: imu.cpp
vio_sim_ws/devel/: .catkin  .rosinstall  setup.sh
vio_sim_ws/devel/lib/pkgconfig/: vio_data_simulation.pc
vio_sim_ws/devel/lib/vio_data_simulation/: vio_data_simulation_node
vio_sim_ws/devel/share/vio_data_simulation/cmake/: vio_data_simulationConfig.cmake
vio_sim_ws/src/src/: gener_alldata.cpp  imu.cpp
